--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "tsx teste.ts",
-    "dev": "tsx src/app.ts"
+    "dev": "tsx src/app.ts",
+    "migration": "tsx src/database/migration.ts"
   },
   "author": "",
   "license": "ISC",
