--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "description": "",
   "dependencies": {
     "@types/dotenv": "^6.1.1",
+    "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "pg": "^8.14.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
     "@types/pg": "^8.11.11",
